--- a/styles/styles.css
+++ b/styles/styles.css
@@ -24,14 +24,16 @@ body {
 /* Sidebar Styles */
 .sidebar-section {
   background-color: #047690;
-  border: 1px solid black;
+  border: 1px solid white;
   border-radius: 20px;
   padding: 20px;
   width: 30%;
 }
 .sidebar-image {
   margin-top: 40px;
-  padding-left: 40px;
+  margin-left: 40px;
+  border-radius: 50%;
+  border: solid white thin;
 }
 .contacts-container {
   padding-left: 40px;
